--- a/index.html
+++ b/index.html
@@ -11,6 +11,31 @@
 </head>
 
 <body>
+    <!-- titolo e sottotitolo -->
+    <section>
+        <div class="container my-5">
+            <div class="row text-center">
+                <div class="col-12">
+                    <h1>Bootstrap 5 Responsive Grid</h1>
+                </div>
+                <div class="col-12">
+                    <h2 class="fs-3 text text-secondary fw-light">Layout a griglia con diversi breakpoint &#40;sm, md,
+                        lg&#41;</h2>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- fine titolo e sottotitolo -->
+    <!-- primo box -->
+    <section></section>
+    <!-- fine primo box -->
+    <!-- secondo box -->
+    <section></section>
+    <!-- fine secondo box -->
+    <!-- terzo box  -->
+    <section></section>
+    <!-- fine terzo box  -->
 
 </body>
 
