feat: box 1 impaginazione

--- a/index.html
+++ b/index.html
@@ -20,15 +20,20 @@
                 </div>
                 <div class="col-12">
                     <h2 class="fs-3 text text-secondary fw-light">Layout a griglia con diversi breakpoint &#40;sm, md,
-                        lg&#41;</h2>
+                        lg&#41;.</h2>
                 </div>
             </div>
         </div>
     </section>
-
     <!-- fine titolo e sottotitolo -->
     <!-- primo box -->
-    <section></section>
+    <section><div class="container">
+        <div class="row row-cols-1 row-cols-md-2">
+            <div class="col-lg-4"><h3>Colonna 1</h3><p>Larghezza intera su dispositivi piccoli, metà larghezza su dispositivi medi e un terzo su dispositivi grandi.</p></div>
+            <div class="col-lg-8"><h3>Colonna 2</h3><p>Larghezza intera su dispositivi piccoli, metà larghezza su dispositivi medi e due terzi su dispositivi grandi.</p></div>
+        </div>
+    </div>
+</section>
     <!-- fine primo box -->
     <!-- secondo box -->
     <section></section>
