--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <!-- primo box -->
     <section><div class="container">
         <div class="row row-cols-1 row-cols-md-2">
-            <div class="col-lg-4"><h3>Colonna 1</h3><p>Larghezza intera su dispositivi piccoli, metà larghezza su dispositivi medi e un terzo su dispositivi grandi.</p></div>
-            <div class="col-lg-8"><h3>Colonna 2</h3><p>Larghezza intera su dispositivi piccoli, metà larghezza su dispositivi medi e due terzi su dispositivi grandi.</p></div>
+            <div class="col-lg-4 bg-light py-4"><h3 class="fs-2">Colonna 1</h3><p>Larghezza intera su dispositivi piccoli, metà larghezza su dispositivi medi e un terzo su dispositivi grandi.</p></div>
+            <div class="col-lg-8 bg-secondary text-white py-4"><h3 class="fs-2">Colonna 2</h3><p>Larghezza intera su dispositivi piccoli, metà larghezza su dispositivi medi e due terzi su dispositivi grandi.</p></div>
         </div>
     </div>
 </section>
