--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
     <!-- secondo box -->
     <section>
     <div class="container">
-        <div class="row row-cols-md-3">
-            <div class="col col-sm-6"><h3 class="fs-2">Colonna 1</h3><p>Metà larghezza su dispositivi piccoli e un tezo su dispositivi medi e più grandi.</p></div>
-            <div class="col col-sm-6"><h3 class="fs-2">Colonna 2</h3><p>Metà larghezza su dispositivi piccoli e un tezo su dispositivi medi e più grandi.</p></div>
-            <div class="col col-sm-12"><h3 class="fs-2">Colonna 3</h3><p>Larghezza intera su dispositivi piccoli &#40;col&hyphen;12&#41;</p></div>
+        <div class="row row-cols-md-3 text-white py-4">
+            <div class="col col-sm-6 bg-primary py-4"><h3 class="fs-2">Colonna 1</h3><p>Metà larghezza su dispositivi piccoli e un tezo su dispositivi medi e più grandi.</p></div>
+            <div class="col col-sm-6 bg-success py-4"><h3 class="fs-2">Colonna 2</h3><p>Metà larghezza su dispositivi piccoli e un tezo su dispositivi medi e più grandi.</p></div>
+            <div class="col col-sm-12 bg-danger py-4"><h3 class="fs-2">Colonna 3</h3><p>Larghezza intera su dispositivi piccoli &#40;col&hyphen;12&#41;</p></div>
         </div>
     </div>
     </section>
