--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
     <!-- fine secondo box -->
     <!-- terzo box  -->
     <section><div class="container">
-        <div class="row row-cols-sm-2 row-cols-md-4">
-            <div class="col"><h3 class="fs-2">Colonna 1</h3><p>Metà larghezza su dispositivi piccoli e un quarto su dispositivi medi e più grandi.</p></div>
-            <div class="col"><h3 class="fs-2">Colonna 2</h3><p>Metà larghezza su dispositivi piccoli e un quarto su dispositivi medi e più grandi.</p></div>
-            <div class="col"><h3 class="fs-2">Colonna 3</h3><p>Metà larghezza su dispositivi piccoli e un quarto su dispositivi medi e più grandi.</p></div>
-            <div class="col"><h3 class="fs-2">Colonna 4</h3><p>Metà larghezza su dispositivi piccoli e un quarto su dispositivi medi e più grandi.</p></div>
+        <div class="row row-cols-sm-2 row-cols-md-4 text-white py-4">
+            <div class="col bg-info py-4"><h3 class="fs-2">Colonna 1</h3><p>Metà larghezza su dispositivi piccoli e un quarto su dispositivi medi e più grandi.</p></div>
+            <div class="col bg-warning py-4"><h3 class="fs-2">Colonna 2</h3><p>Metà larghezza su dispositivi piccoli e un quarto su dispositivi medi e più grandi.</p></div>
+            <div class="col bg-dark py-4"><h3 class="fs-2">Colonna 3</h3><p>Metà larghezza su dispositivi piccoli e un quarto su dispositivi medi e più grandi.</p></div>
+            <div class="col bg-secondary-subtle text-dark py-4"><h3 class="fs-2">Colonna 4</h3><p>Metà larghezza su dispositivi piccoli e un quarto su dispositivi medi e più grandi.</p></div>
         </div>
     </div></section>
     <!-- fine terzo box  -->
